--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
 
 <!-- Menu Principal-->
 
+<nav class="navbar- navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">LOGO</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar3">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbar3">
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control- mr-sm" type="search" placeholder="Search" aria-label="Search">
+      </form>
+    </div>
+</nav>
+
 <!-- Trailers -->
  
 
