--- a/index.html
+++ b/index.html
@@ -1,45 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, user-scalable=no">
-<title>Marvel-Movieverse</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-<script src="https://use.fontawesome.com/95443e83a8.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="Assets/css/main.css">
-
-</head>
-<body>
-
-<!-- Menu Principal-->
-
-<nav class="navbar- navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">LOGO</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar3">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <title>Marvel-Movieverse</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+    <script src="https://use.fontawesome.com/95443e83a8.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="Assets/css/main.css">
+  </head>
+  <body>
+    <!-- Menu Principal-->
+    <nav class="navbar- navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">LOGO</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar3">
       <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbar3">
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control- mr-sm" type="search" placeholder="Search" aria-label="Search">
-      </form>
-    </div>
-</nav>
-
-<!-- Trailers -->
- 
-
-
-
-
-
-
-
-
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-<script src="Assets/js/app.js"></script>
-
-</body>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar3">
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control- mr-sm" type="search" placeholder="Search" aria-label="Search">
+        </form>
+      </div>
+    </nav>
+    <!-- Caja dónde se podran ver las películas y la selección filtrada
+    por el usuario -->
+    <!-- Trailers -->
+    
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="Assets/js/app.js"></script>
+  </body>
 </html>
