--- a/index.html
+++ b/index.html
@@ -2,31 +2,60 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Marvel-Movieverse</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <script src="https://use.fontawesome.com/95443e83a8.js"></script>
+    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="Assets/css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
   </head>
   <body>
-    <!-- Menu Principal-->
-    <nav class="navbar- navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">LOGO</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar3">
-      <span class="navbar-toggler-icon"></span>
+    <!-- Navbar Principal-->
+    <nav class="navbar sticky-top navbar-toggleable-md navbar-inverse bg-inverse">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" id="btn-burger">
+        <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbar3">
+      <a class="navbar-brand" href="#">
+        <img src="assets/img/mm-logo.svg" alt="" id="logo" class="d-inline-block align-top">
+        Marvel Movieverse
+      </a>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <!-- <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+          </li>
+        </ul> -->
         <form class="form-inline my-2 my-lg-0">
-          <input class="form-control- mr-sm" type="search" placeholder="Search" aria-label="Search">
+          <input class="form-control form-control-sm" type="text" placeholder="Type Here">
+          <button class="btn btn-outline-success btn-sm" type="submit">Search</button>
         </form>
       </div>
     </nav>
-    <!-- Caja dónde se podran ver las películas y la selección filtrada
-    por el usuario -->
+    <!-- Columna de filtros -->
+    <div class="container-fluid" id="main-container">
+      <div class="row">
+        <div class="col-12 col-md-3" id="sidebar">
+        </div>
+        <div class="col-12 col-md-9" id="movies-container">
+          <div id="movies">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, sapiente ipsum qui consequuntur, soluta hic minima autem recusandae laboriosam deserunt, vitae rerum veritatis dignissimos, eligendi nulla sint ullam earum. Explicabo.</p>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Trailers -->
     
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="Assets/js/app.js"></script>
+    <script src="assets/js/jquery-3.2.1.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/data/marvel.js"></script>
+    <script src="assets/js/app.js"></script>
   </body>
 </html>
