--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, user-scalable=no">
 <title>Marvel-Movieverse</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="Assets/css/main.css">
 <link rel="stylesheet" type="text/css" href="Assets/dist/star-rating.css">
@@ -13,6 +13,7 @@
   <body>
 
 <!-- Menu Principal-->
+.
 	<div class="row">
 		<div class="col-xs-12 col-md-12 col-lg-12">
 			<nav class="navbar navbar-inverse">
@@ -21,10 +22,10 @@
 					<img src="Assets/img/logo-mm.svg">
 				</div>
         <!--BUSCADOR-->
-        <form class="navbar-form" action="">
+        <form class="navbar-form- pull-right" action="">
         	<div class="form-group">
         		<input type="text" class="form-control" placeholder="Search...">
-        		<i class="glyphicon glyphicon-search"></i>
+       
         	</div>
         </form>
       </nav>
@@ -34,7 +35,7 @@
 <!--MENU VERTICAL-->
 <div class="container">
       <div class="row">
-        <div class="col-sm-3 col-md-3">
+        <div class="col-sm-2 col-md-2">
           <div class="panel-group" id="accordion">
             <div class="panel panel-default">
               <div class="panel-heading">
@@ -123,53 +124,39 @@
                 </div>
               </div>
             </div>
-          </div>
         </div>
-        
-      </div>
-    </div>
+        </div>
+   
+
 
     <!-- Caja dónde se podran ver las películas y la selección filtrada
     por el usuario -->
     <!-- Trailers -->
 
-
 <!--Carrrousel-->
-<div class="row">
 <div class="col-sm-10">
-<div id="myCarousel" class="carousel slide pull-rigth" data-ride="carousel">
-<h1>Proximamente</h1>
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
+	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
-    <div class="item active" id="img1">
+    <div class="carousel-item active" id="img1">
     </div>
-
-    <div class="item" id="img2">
+    <div class="carousel-item" id="img2">
     </div>
-
-    <div class="item" id="img3">
+    <div class="carousel-item" id="img3">
     </div>
   </div>
-
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
 </div>
+	</div>
 </div>
 </div>
+
 
 
 
@@ -191,11 +178,14 @@
 </span>
 
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script srr="Assets/js/app.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 <script src="https://use.fontawesome.com/95443e83a8.js"></script>
 <script src="Assets/dist/star-rating.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+
 
 
 </body>
