--- a/index.html
+++ b/index.html
@@ -134,9 +134,10 @@
     <!-- Trailers -->
 
 <!--Carrrousel-->
-<div class="col-sm-10">
+<div class="col-md-10">
+<h1>Proximamente</h1>
 	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
+  <div class="carousel-inner" >
     <div class="carousel-item active" id="img1">
     </div>
     <div class="carousel-item" id="img2">
@@ -153,7 +154,7 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-	</div>
+</div>
 </div>
 </div>
 
