Añadido id al contenedor de info de los comics

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </div>
               </div>
               <!-- Tercera Row COMICS -->
-              <div class="row">
+              <div class="row" id="comics-info">
                 <!-- COMIC FIRST APPEARANCE (4 columnas) -->
                 <div class="col-md-4">
                   <div id="first-appearance">
