--- a/index.html
+++ b/index.html
@@ -38,13 +38,15 @@
         </form>
       </div>
     </nav>
-    <!-- Columna de filtros -->
+    <!-- Fila de contenido principal -->
     <div class="container-fluid" id="main-container">
       <div class="row">
-        <div class="col-12 col-md-3" id="sidebar">
+        <!-- Columna de filtros -->
+        <div class="col-12 col-lg-3" id="sidebar">
 
         </div>
-        <div class="col-12 col-md-9" id="movies-container">
+        <!-- Columna de resultado (películas) -->
+        <div class="col-12 col-lg-9" id="movies-container">
           <div id="movies">
             
           </div>
@@ -67,12 +69,12 @@
             <div class="container-fluid">
               <!-- Primera Row POSTER + TRAILER-->
               <div class="row">
-                <div class="col-md-4">
+                <div class="col-lg-4">
                   <div id="poster">
                     <!-- AQUÍ VA EL POSTER DE LA PELICULA AGREGADO DESDE JQUERY-->
                   </div>
                 </div>
-                <div class="col-md-8">
+                <div class="col-lg-8">
                   <div id="trailer">
                     <!-- AQUÍ VA EL TRAILER DE LA PELICULA AGREGADO DESDE JQUERY-->
                   </div>
@@ -80,7 +82,7 @@
               </div>
               <!-- Segunda Row INFORMACION-->
               <div class="row">
-                <div class="col-md-12">
+                <div class="col-lg-12">
                   <div id="info">
                     <!-- AQUÍ VA INFORMACION DE LA PELICULA AGREGADO DESDE JQUERY-->
                   </div>
@@ -89,18 +91,18 @@
               <!-- Tercera Row COMICS -->
               <div class="row" id="comics-info">
                 <!-- COMIC FIRST APPEARANCE (4 columnas) -->
-                <div class="col-md-4">
+                <div class="col-lg-4">
                   <div id="first-appearance">
                     <!-- AQUÍ VA IMAGEN DEL COMIC FIRST APPEARANCE AGREGADO DESDE JQUERY-->
                   </div>
                 </div>
                 <!-- COMIC MOST POPULAR (4 columnas) -->
-                <div class="col-md-4">
+                <div class="col-lg-4">
                   <div id="most-popular">
                     <!-- AQUÍ VA IMAGEN DEL COMIC MOST POPULAR AGREGADO DESDE JQUERY-->
                   </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4">
                   <div id="where-to-begin">
                     <!-- AQUÍ VA IMAGEN DEl COMIC WHERE TO BEGIN AGREGADO DESDE JQUERY-->
                   </div>
@@ -111,7 +113,6 @@
         </div>
       </div>
     </div>
-    
     <script src="assets/js/jquery-3.2.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="assets/js/bootstrap.min.js"></script>
