Clases de columnas corregidas, modal responsive listo

--- a/index.html
+++ b/index.html
@@ -91,18 +91,18 @@
               <!-- Tercera Row COMICS -->
               <div class="row" id="comics-info">
                 <!-- COMIC FIRST APPEARANCE (4 columnas) -->
-                <div class="col-lg-4">
+                <div class="col-sm-4">
                   <div id="first-appearance">
                     <!-- AQUÍ VA IMAGEN DEL COMIC FIRST APPEARANCE AGREGADO DESDE JQUERY-->
                   </div>
                 </div>
                 <!-- COMIC MOST POPULAR (4 columnas) -->
-                <div class="col-lg-4">
+                <div class="col-sm-4">
                   <div id="most-popular">
                     <!-- AQUÍ VA IMAGEN DEL COMIC MOST POPULAR AGREGADO DESDE JQUERY-->
                   </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-sm-4">
                   <div id="where-to-begin">
                     <!-- AQUÍ VA IMAGEN DEl COMIC WHERE TO BEGIN AGREGADO DESDE JQUERY-->
                   </div>
