Añadiendo sidebar temporal

--- a/index.html
+++ b/index.html
@@ -43,7 +43,14 @@
       <div class="row">
         <!-- Columna de filtros -->
         <div class="col-12 col-lg-3" id="sidebar">
-
+          <ul class="nav flex-column">
+            <li class="nav-item">lorem</li>
+            <li class="nav-item">lorem</li>
+            <li class="nav-item">lorem</li>
+            <li class="nav-item">lorem</li>
+            <li class="nav-item">lorem</li>
+            <li class="nav-item">lorem</li>
+          </ul>
         </div>
         <!-- Columna de resultado (películas) -->
         <div class="col-12 col-lg-9" id="movies-container">
