Categorias menu vertical, falta pasar a bts 4

--- a/index.html
+++ b/index.html
@@ -14,119 +14,164 @@
 
 <!-- Menu Principal-->
 .
-	<div class="row">
-		<div class="col-xs-12 col-md-12 col-lg-12">
-			<nav class="navbar navbar-inverse">
-				<!--LOGO-->
-				<div class="navbar-header">
-					<img src="Assets/img/logo-mm.svg">
+<div class="row">
+	<div class="col-xs-12 col-md-12 col-lg-12">
+		<nav class="navbar navbar-inverse">
+			<!--LOGO-->
+			<div class="navbar-header">
+				<img src="Assets/img/mm-logo.svg">
+			</div>
+			<!--BUSCADOR-->
+			<form class="navbar-form- pull-right" action="">
+				<div class="input-group stylish-input-group">
+					<input type="text" class="form-control"  placeholder="Search..." >
+					<span class="input-group-addon">
+					</span>
 				</div>
-        <!--BUSCADOR-->
-        <form class="navbar-form- pull-right" action="">
-        	<div class="form-group">
-        		<input type="text" class="form-control" placeholder="Search...">
-       
-        	</div>
-        </form>
-      </nav>
-    </div>
-  </div>
+			</form>
+		</nav>
+	</div>
+</div>
 
 <!--MENU VERTICAL-->
-<div class="container">
-      <div class="row">
-        <div class="col-sm-2 col-md-2">
-          <div class="panel-group" id="accordion">
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"><span class="glyphicon glyphicon-folder-close">
-                    </span>Content</a>
-                </h4>
-              </div>
-              <div id="collapseOne" class="panel-collapse collapse in">
-                <ul class="list-group">
-                  <li class="list-group-item"><span class="glyphicon glyphicon-pencil text-primary"></span><a href="http://fb.com/moinakbarali">Articles</a>
-                    <ul class="list-group">
-                      <li class="list-group-item"><span class="glyphicon glyphicon-pencil text-primary"></span><a href="http://fb.com/moinakbarali">Articles</a></li>
 
-                      <li class="list-group-item"><span class="glyphicon glyphicon-flash text-success"></span><a href="http://fb.com/moinakbarali">News</a></li>
 
-                      <li class="list-group-item"><span class="glyphicon glyphicon-file text-info"></span><a href="http://fb.com/moinakbarali">Newsletters</a></li>
+<div class="row">
+	<div class="col-xs-2 col-md-2 col-lg-2">
+		<div class="panel-group" id="accordion">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"><i class="fa fa-globe" aria-hidden="true"></i> UNIVERSE</a>
+					</h4>
+				</div>
+				<div id="collapseOne" class="panel-collapse collapse in">
+					<div class="panel-body">
+						<table class="table">
+							<tr>
+								<td>
+									<i class="fa fa-question-circle-o" aria-hidden="true"></i><a href="">Marvel Cinematic Universe</a>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<i class="fa fa-question-circle-o" aria-hidden="true"></i><a href="">X-men Universe</a>
+								</td>
+							</tr>
+						</table>
+					</div>
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"><i class="fa fa-smile-o" aria-hidden="true"></i> STATUS</a>
+					</h4>
+				</div>
+				<div id="collapseTwo" class="panel-collapse collapse">
+					<div class="panel-body">
+						<table class="table">
+							<tr>
+								<td>
+									<a href="">Watch at Home</a> 
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<a href="">Now playing</a>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<a href="">Coming Soon</a>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<a href="">Upcoming</a>
+								</td>
+							</tr>
+						</table>
+					</div>
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#collapseThree"><i class="fa fa-star-o" aria-hidden="true"></i> RANKING</a>
+					</h4>
+				</div>
+				<div id="collapseThree" class="panel-collapse collapse">
+					<div class="panel-body">
+						<table class="table">
+							<tr>
+								<td>
+									<a href="">Best Movies</a>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<a href="">Worst Movies</a> 
+								</td>
+							</tr>
+						</table>
+					</div>
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#collapseFour"> Genre</a>
+					</h4>
+				</div>
+				<div id="collapseFour" class="panel-collapse collapse">
+					<div class="panel-body">
+						<table class="table">
+							<tr>
+								<td>
+									<a href="">Action</a>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<a href="">Drama</a>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<a href="">Comedy</a>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<a href="">Scity</a>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<a href="">Romance</a>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<a href="">Adventure</a>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<a href="">Fantasy</a>
+								</td>
+							</tr>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 
-                      <li class="list-group-item"> <span class="glyphicon glyphicon-comment text-success"></span><a href="http://fb.com/moinakbarali">Comments</a><span class="badge">42</span></li>
 
-                    </ul>
-                  </li>
 
-                  <li class="list-group-item"><span class="glyphicon glyphicon-flash text-success"></span><a href="http://fb.com/moinakbarali">News</a></li>
-
-                  <li class="list-group-item"><span class="glyphicon glyphicon-file text-info"></span><a href="http://fb.com/moinakbarali">Newsletters</a></li>
-
-                  <li class="list-group-item"> <span class="glyphicon glyphicon-comment text-success"></span><a href="http://fb.com/moinakbarali">Comments</a><span class="badge">42</span></li>
-
-                </ul>
-              </div>
-            </div>
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour"><span class="glyphicon glyphicon-file">
-                    </span>Reports</a>
-                </h4>
-              </div>
-              <div id="collapseFour" class="panel-collapse collapse">
-                <div class="list-group">
-                  <a href="#" class="list-group-item">
-                    Cras justo odio
-                  </a>
-                  <div class="list-group">
-                    <a href="#" class="list-group-item">
-                      Cras justo odio
-                    </a>
-                    <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
-                    <a href="#" class="list-group-item">Morbi leo risus</a>
-                    <a href="#" class="list-group-item">Porta ac consectetur ac</a>
-                    <a href="#" class="list-group-item">Vestibulum at eros</a>
-                  </div>
-                  <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
-                  <a href="#" class="list-group-item">Morbi leo risus</a>
-                  <a href="#" class="list-group-item">Porta ac consectetur ac</a>
-                  <a href="#" class="list-group-item">Vestibulum at eros</a>
-                </div>
-              </div>
-            </div>
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive"><span class="glyphicon glyphicon-heart">
-                    </span>Reports</a>
-                </h4>
-              </div>
-              <div id="collapseFive" class="panel-collapse collapse">
-                <div class="list-group">
-                  <a href="#" class="list-group-item">
-                    <h4 class="list-group-item-heading">List group item heading</h4>
-                    <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-                  </a>
-                </div>
-                <div class="list-group">
-                  <a href="#" class="list-group-item active">
-                    <h4 class="list-group-item-heading">List group item heading</h4>
-                    <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-                  </a>
-                </div>
-                <div class="list-group">
-                  <a href="#" class="list-group-item">
-                    <h4 class="list-group-item-heading">List group item heading</h4>
-                    <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-                  </a>
-                </div>
-              </div>
-            </div>
-        </div>
-        </div>
-   
 
 
     <!-- Caja dónde se podran ver las películas y la selección filtrada
@@ -155,8 +200,7 @@
   </a>
 </div>
 </div>
-</div>
-</div>
+
 
 
 
