Modificación estilos de navbar y footer

--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-  <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, user-scalable=no">
-<title>Marvel-Movieverse</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="Assets/css/main.css">
-<link rel="stylesheet" type="text/css" href="Assets/dist/star-rating.css">
- 
-  </head>
-  <body>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no">
+	<title>Marvel-Movieverse</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="Assets/css/main.css">
+	<link rel="stylesheet" type="text/css" href="Assets/dist/star-rating.css">
+
+</head>
+<body>
 
 <!-- Menu Principal-->
-.
 <div class="row">
 	<div class="col-xs-12 col-md-12 col-lg-12">
 		<nav class="navbar navbar-inverse">
@@ -33,203 +32,251 @@
 	</div>
 </div>
 
-<!--MENU VERTICAL-->
+<div class="img-fluid" alt="Responsive image">
 
-
-<div class="row">
-	<div class="col-xs-2 col-md-2 col-lg-2">
-		<div class="panel-group" id="accordion">
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h4 class="panel-title">
-						<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"><i class="fa fa-globe" aria-hidden="true"></i> UNIVERSE</a>
-					</h4>
-				</div>
-				<div id="collapseOne" class="panel-collapse collapse in">
-					<div class="panel-body">
-						<table class="table">
-							<tr>
-								<td>
-									<i class="fa fa-question-circle-o" aria-hidden="true"></i><a href="">Marvel Cinematic Universe</a>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<i class="fa fa-question-circle-o" aria-hidden="true"></i><a href="">X-men Universe</a>
-								</td>
-							</tr>
-						</table>
+	<!--Menu Vertical-->
+	<div class="row">
+		<div class="col-xs-2 col-md-2 col-lg-2">
+			<div class="panel-group" id="accordion">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h4 class="panel-title">
+							<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"><i class="fa fa-globe" aria-hidden="true"></i> UNIVERSE</a>
+						</h4>
+					</div>
+					<div id="collapseOne" class="panel-collapse collapse in">
+						<div class="panel-body">
+							<table class="table">
+								<tr>
+									<td>
+										<i class="fa fa-question-circle-o" aria-hidden="true"></i><a href="">Marvel Cinematic Universe</a>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<i class="fa fa-question-circle-o" aria-hidden="true"></i><a href="">X-men Universe</a>
+									</td>
+								</tr>
+							</table>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h4 class="panel-title">
-						<a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"><i class="fa fa-smile-o" aria-hidden="true"></i> STATUS</a>
-					</h4>
-				</div>
-				<div id="collapseTwo" class="panel-collapse collapse">
-					<div class="panel-body">
-						<table class="table">
-							<tr>
-								<td>
-									<a href="">Watch at Home</a> 
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<a href="">Now playing</a>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<a href="">Coming Soon</a>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<a href="">Upcoming</a>
-								</td>
-							</tr>
-						</table>
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h4 class="panel-title">
+							<a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo"><i class="fa fa-smile-o" aria-hidden="true"></i> STATUS</a>
+						</h4>
+					</div>
+					<div id="collapseTwo" class="panel-collapse collapse">
+						<div class="panel-body">
+							<table class="table">
+								<tr>
+									<td>
+										<a href="">Watch at Home</a> 
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<a href="">Now playing</a>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<a href="">Coming Soon</a>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<a href="">Upcoming</a>
+									</td>
+								</tr>
+							</table>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h4 class="panel-title">
-						<a data-toggle="collapse" data-parent="#accordion" href="#collapseThree"><i class="fa fa-star-o" aria-hidden="true"></i> RANKING</a>
-					</h4>
-				</div>
-				<div id="collapseThree" class="panel-collapse collapse">
-					<div class="panel-body">
-						<table class="table">
-							<tr>
-								<td>
-									<a href="">Best Movies</a>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<a href="">Worst Movies</a> 
-								</td>
-							</tr>
-						</table>
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h4 class="panel-title">
+							<a data-toggle="collapse" data-parent="#accordion" href="#collapseThree"><i class="fa fa-star-o" aria-hidden="true"></i> RANKING</a>
+						</h4>
+					</div>
+					<div id="collapseThree" class="panel-collapse collapse">
+						<div class="panel-body">
+							<table class="table">
+								<tr>
+									<td>
+										<a href="">Best Movies</a>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<a href="">Worst Movies</a> 
+									</td>
+								</tr>
+							</table>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h4 class="panel-title">
-						<a data-toggle="collapse" data-parent="#accordion" href="#collapseFour"> Genre</a>
-					</h4>
-				</div>
-				<div id="collapseFour" class="panel-collapse collapse">
-					<div class="panel-body">
-						<table class="table">
-							<tr>
-								<td>
-									<a href="">Action</a>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<a href="">Drama</a>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<a href="">Comedy</a>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<a href="">Scity</a>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<a href="">Romance</a>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<a href="">Adventure</a>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<a href="">Fantasy</a>
-								</td>
-							</tr>
-						</table>
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h4 class="panel-title">
+							<a data-toggle="collapse" data-parent="#accordion" href="#collapseFour"> Genre</a>
+						</h4>
+					</div>
+					<div id="collapseFour" class="panel-collapse collapse">
+						<div class="panel-body">
+							<table class="table">
+								<tr>
+									<td>
+										<a href="">Action</a>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<a href="">Drama</a>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<a href="">Comedy</a>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<a href="">Scity</a>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<a href="">Romance</a>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<a href="">Adventure</a>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<a href="">Fantasy</a>
+									</td>
+								</tr>
+							</table>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
 
 
 
 
 
     <!-- Caja dónde se podran ver las películas y la selección filtrada
-    por el usuario -->
-    <!-- Trailers -->
+    	por el usuario -->
+    	<!-- Trailers -->
 
-<!--Carrrousel-->
-<div class="col-md-10">
-<h1>Proximamente</h1>
-	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner" >
-    <div class="carousel-item active" id="img1">
-    </div>
-    <div class="carousel-item" id="img2">
-    </div>
-    <div class="carousel-item" id="img3">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+    	<!--Carrrousel-->
+    	<div class="col-md-10">
+    		<h1>Proximamente</h1>
+    		<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    			<div class="carousel-inner" >
+    				<div class="carousel-item active" id="img1">
+    				</div>
+    				<div class="carousel-item" id="img2">
+    				</div>
+    				<div class="carousel-item" id="img3">
+    				</div>
+    			</div>
+    			<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    				<span class="sr-only">Previous</span>
+    			</a>
+    			<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+    				<span class="sr-only">Next</span>
+    			</a>
+    		</div>
+    	</div>
+
+
+
+
+
+    	<!-- Trailers -->
+    	
+
+    	<!--Star rating -->
+
+    	<span class="gl-star-rating-stars s0">
+    		<span data-value="1" data-text="1"></span>
+    		<span data-value="2" data-text="2"></span>
+    		<span data-value="3" data-text="3"></span>
+    		<span data-value="4" data-text="4"></span>
+    		<span data-value="5" data-text="5"></span>
+    	</span>
+
+    	<span class="gl-star-rating-text"></span>
+
+
+
+
 </div>
+
+<!--Footer-->
+<div class="footer">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-6  col-md-6 col-sm-6">
+				<div class="footer_dv">
+					<img class="img-responsive" src="Assets/img/universo_marvel.png" style="width: 34em;" alt="about">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-3 col-sm-3">
+				<div class="footer_dv">
+					<div class="line-dash"></div>
+					<ul id="linkMarvel">
+						<li><a class="a-font" href="http://marvel.com/" target="_blank">Official Marvel Site</a></li>
+						<li><a class="a-font" href="http://marvel.wikia.com/wiki/Marvel_Database" target="_blank">Marvel Database</a></li>
+						<li><a class="a-font" href="https://www.youtube.com/channel/UCvC4D8onUfXzvjTOM-dBfEA" target="_blank">Marvel Entertainment</a></li>
+						<li><a class="a-font" href="http://howtoarsenio.blogspot.com/" target="_blank">Comic Blog: How to Arsenio Lupin </a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-3 col-sm-3">
+				<div class="footer_dv">
+					<div class="line-dash"></div>
+					<ul id="iconRed">
+						<li class="iconSocialMedia"><a class="a-font" href="#" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+						<li class="iconSocialMedia"><a class="a-font" href="#" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+						<li class="iconSocialMedia"><a class="a-font" href="#" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
+<footer class="py-3 bg-dark">
+	<div id="copyright">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<p>2018 No copyright infringement intended. All right belong to their respective owners. This is done with purely educational purposes.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</footer>
 
+<!--Script-->
 
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script srr="Assets/js/app.js"></script>
 
-
-
-<!-- Trailers -->
- 
-
-<!--star rating -->
-
-<span class="gl-star-rating-stars s0">
-<span data-value="1" data-text="1"></span>
-<span data-value="2" data-text="2"></span>
-<span data-value="3" data-text="3"></span>
-<span data-value="4" data-text="4"></span>
-<span data-value="5" data-text="5"></span>
-</span>
-
-<span class="gl-star-rating-text">
-	
-</span>
-
-
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script srr="Assets/js/app.js"></script>
-
-<script src="https://use.fontawesome.com/95443e83a8.js"></script>
-<script src="Assets/dist/star-rating.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+	<script src="https://use.fontawesome.com/95443e83a8.js"></script>
+	<script src="Assets/dist/star-rating.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
 
 
 
