Agregando datos e imagenes de encuesta de mercado

--- a/index.html
+++ b/index.html
@@ -207,22 +207,19 @@
     	<!-- Trailers -->
     	
 
-    	<!--Star rating -->
+<!--Star rating -->
 
-    	<span class="gl-star-rating-stars s0">
-    		<span data-value="1" data-text="1"></span>
-    		<span data-value="2" data-text="2"></span>
-    		<span data-value="3" data-text="3"></span>
-    		<span data-value="4" data-text="4"></span>
-    		<span data-value="5" data-text="5"></span>
-    	</span>
+<span class="gl-star-rating-stars s0">
+	<span data-value="1" data-text="1"></span>
+	<span data-value="2" data-text="2"></span>
+	<span data-value="3" data-text="3"></span>
+	<span data-value="4" data-text="4"></span>
+	<span data-value="5" data-text="5"></span>
+</span>
 
-    	<span class="gl-star-rating-text"></span>
+<span class="gl-star-rating-text"></span>
 
-
-
-
-</div>
+</div><!--Div contenedor de la imagen de fondo-->
 
 <!--Footer-->
 <div class="footer">
