Añadí el slider al sitio

--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
         </form>
       </div>
     </nav>
+    <!-- Slider -->
+    <div id="coming-soon-slider" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner" role="listbox">
+        <div class="carousel-item active">
+          <div class="d-block img-fluid" id="first-item"></div>
+          <div class="carousel-caption">
+            <h3>Coming Soon!</h3>
+            <p>Find the latest Marvel movies coming soon to theaters!</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Fila de contenido principal -->
     <div class="container-fluid" id="main-container">
       <div class="row">
@@ -108,13 +121,12 @@
         </div>
       </div>
     </div>
-    <!-- footer snniped -->
+    <!-- footer snnipet -->
     <div class="footer">
       <div class="container">
         <div class="row">
           <div class="col-lg-6  col-md-6">
             <div class="footer_dv">
-              <!--GUARDAR IMAGEN EN LA CARPETA CORRECTA Y CAMBIAR RUTA-->
               <img class="img-responsive" src="assets/img/marvel-universe.png" alt="about">
             </div>
           </div>
